docs: reframe as a vibe-coded demonstrator; remove FragPipe; expand examples + run helper
- Remove all FragPipe/MSFTBX references from README, DESIGN.md, docs/index.md, CLAUDE.md, pom
- Remove the FragPipe/MSFTBX adapter (org.mzpeak.fragpipe.MsftbxAdapter + test) and the msftbx dependency
- Correct the Hadoop framing: no Hadoop FileSystem/Configuration/native libs are used, but a single
  self-contained hadoop-client-api jar is required on the classpath (parquet-java statically references it);
  hadoop-client-api scope provided -> compile so the build is self-contained/runnable
- Add a prominent 'demonstrator / vibe-coded from reference implementations' note
- Expand the examples docs (per-tool usage, options, bundled fixtures) + add ./run-example.sh helper
- 25 tests green; mvn verify builds; examples runnable via the helper

Note: .planning/ and PROJECT-BRIEF.md retain FragPipe references as historical project record.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>